[gd_scene load_steps=4 format=3 uid="uid://cksyo102wb61k"]

[ext_resource type="Script" path="res://levels/menu.gd" id="1_3pjy6"]
[ext_resource type="Texture2D" uid="uid://b1r636xolti0a" path="res://assets/logo.png" id="2_3ldxm"]
[ext_resource type="Texture2D" uid="uid://cbqtb4dofdggo" path="res://assets/Tlo.png" id="2_63i1s"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_3pjy6")

[node name="TextureRect2" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_63i1s")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -544.0
offset_top = -60.0
offset_right = -74.0
offset_bottom = 234.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 62
text = "Write your name:"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 51
text = "Json"
alignment = 1

[node name="PlayButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 71
text = "Play"

[node name="Choose level" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 41
text = "Choose level"

[node name="PanelContainer2" type="PanelContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -235.0
offset_top = -129.5
offset_right = 235.0
offset_bottom = 129.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Level 1: "

[node name="Button1" type="Button" parent="PanelContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "play"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Level 2: "

[node name="Button2" type="Button" parent="PanelContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "play"

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer2/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Level 3: "

[node name="Button3" type="Button" parent="PanelContainer2/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "play"

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer2/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Level 3: "

[node name="Button4" type="Button" parent="PanelContainer2/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "play"

[node name="Button" type="Button" parent="PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "X
"

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -896.0
offset_top = 80.0
offset_right = 280.0
offset_bottom = 458.0
grow_horizontal = 2
size_flags_vertical = 0
texture = ExtResource("2_3ldxm")

[connection signal="pressed" from="PanelContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Choose level" to="." method="_on_choose_level_pressed"]
[connection signal="pressed" from="PanelContainer2/VBoxContainer/HBoxContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="PanelContainer2/VBoxContainer/HBoxContainer2/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="PanelContainer2/VBoxContainer/HBoxContainer3/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="PanelContainer2/VBoxContainer/HBoxContainer4/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="PanelContainer2/VBoxContainer/Button" to="." method="_on_button_pressed"]
